src/objects/Stock_Point__c.object
<CustomObject>
    <description>Master of all Service Centers, Service Engineers</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>BANGALORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUBANESWAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHENNAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COCHIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEHRADUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHAZIABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GURGAON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUWAHATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDERABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAIPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAMMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOLKATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUCKNOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUDHIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUMBAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAIPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RANCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROHTAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VADODARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIJAYAWADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CST_Interstate__c</fullName>
        <label>CST Interstate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CST_No__c</fullName>
        <label>CST No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_within_State__c</fullName>
        <label>CST within State</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DESIGNATION__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>AREA SERVICE IN-CHARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AREA SERVICE IN-CHARGE (BATTERY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSISTANT GENERAL MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSISTANT MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSISTANT VICE PRESIDENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRANCH SERVICE IN-CHARGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUTY GENERAL MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPUTY MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRICIAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINEER - TESTING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXECUTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXECUTIVE - AUDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXECUTIVE - CALL CENTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENERAL MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HELPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGIONAL SERVICE MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REGIONAL TRAINING SPECILIEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE COORDINATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - GEN SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - HIGH CAPACITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - LOW CAPACITY</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - SOLAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - TRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - VAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE ENGINEER - WAREHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. EXECUTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. MANAGER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. VICE PRESIDENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_No__c</fullName>
        <label>Pan No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Branch</label>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Stock Points (Related To Branch)</relationshipLabel>
        <relationshipName>Stock_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Service_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Service Center</label>
        <referenceTo>Stock_Point__c</referenceTo>
        <relationshipLabel>Stock Points</relationshipLabel>
        <relationshipName>R00N20000001R4qoEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STN_Series__c</fullName>
        <label>STN Series</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Center_Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center_Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center_Location_Code__c</fullName>
        <label>Location Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Id__c</fullName>
        <inlineHelpText>Required Field . Should match Oracle AR Customer Number</inlineHelpText>
        <label>Service Engineer Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Mobile_No__c</fullName>
        <label>Service Engineer Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Engineer_Name__c</fullName>
        <label>Service Engineer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>$User.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCS__c</fullName>
        <label>TCS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TIN_No__c</fullName>
        <label>TIN No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Contact No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VAT_InterState__c</fullName>
        <label>VAT InterState</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_within_State__c</fullName>
        <label>VAT within State</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <label>Vendor State</label>
        <picklist>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttar Pradesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Stock Point</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Service_Center_Location_Code__c</columns>
        <columns>Related_to_Service_Center__c</columns>
        <columns>Related_To_Branch__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>STN_Series__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Service_Center</fullName>
        <columns>NAME</columns>
        <columns>Service_Center_Location_Code__c</columns>
        <columns>Service_Center_Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Stock_Point__c.ServiceCenter</value>
        </filters>
        <label>Service Center</label>
    </listViews>
    <listViews>
        <fullName>Service_Engineer</fullName>
        <columns>NAME</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>Related_to_Service_Center__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Stock_Point__c.ServiceEngineer,Stock_Point__c.ServiceCenter</value>
        </filters>
        <label>Service Engineer</label>
    </listViews>
    <nameField>
        <label>Stock Point No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Points</pluralLabel>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceCenter</fullName>
        <active>true</active>
        <label>Service Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>ServiceEngineer</fullName>
        <active>true</active>
        <label>Service Engineer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendors</fullName>
        <active>true</active>
        <label>Vendors</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VAT_and_CST_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>OR( AND(NOT( ISBLANK(   CST_within_State__c ) ),NOT(ISBLANK( VAT_within_State__c ) )) ,
 AND(NOT( ISBLANK( CST_Interstate__c ) ), NOT (ISBLANK(  VAT_InterState__c  ) ) ))</errorConditionFormula>
        <errorMessage>Either VAT  or CST can be applicable</errorMessage>
    </validationRules>
</CustomObject>